Fixes #23781 css:fixes user profile modal overflows on long username

--- a/static/styles/modal.css
+++ b/static/styles/modal.css
@@ -50,7 +50,7 @@
     font-size: 1.375rem;
     font-weight: 600;
     line-height: 1.25;
-    overflow:hidden; 
+    overflow-x: hidden; 
     white-space: nowrap;
     text-overflow: ellipsis;
     padding-right: 1rem;
